@@ -38,6 +38,8 @@ dohpaZ (11/?/03)
   lines, points, etc...).
 + Move eqstr_{}.txt handling to its own class.
 + Integrated patch# 844078 "Fix to class displays" by belith (UnGod).
++ Support rescaling the Z for a whole map to allow migration of old/borked 
+  maps.
 
 dohpaZ (10/24/03)
 ---------------------
